--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,32 @@
+---
+import Head from '../components/Head.astro'
+import { SITE } from '../consts'
+import Header from '../components/Header.astro'
+// import Footer from "../components/Footer.astro";
+
+type Props = {
+  title: string
+  description: string
+  image?: string
+}
+
+const { title, description, image } = Astro.props
+---
+
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Kane Vidzro</title>
+    <Head
+      title={`${title} | ${SITE.NAME}`}
+      description={description}
+      image={image}
+    />
   </head>
   <body>
-    <slot />
+    <Header />
+    <main>
+      <slot />
+    </main>
+    <!-- <Footer /> -->
   </body>
 </html>
-
-<style>
-  html,
-  body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
-</style>
