update the packages and added my images.

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -92,7 +92,7 @@ const { title, description, image = '/nano.png' } = Astro.props
   "description": "CEO and founder of Xtottel, a technology company providing communication APIs and e-commerce infrastructure to power Africa's next economic surge through technology.",
   "url": "https://kanevidzro.com",
   "birthDate": "2008-02-15",
-  "image": "https://kanevidzro.com/assets/kv2zax.png",
+  "image": "https://kanevidzro.com/assets/82zax.jpg",
   "sameAs": [
     "https://twitter.com/kanevidzro",
     "https://linkedin.com/in/kanevidzro",
