--- a/src/pages/thoughts/index.astro
+++ b/src/pages/thoughts/index.astro
@@ -3,7 +3,6 @@ import ThoughtsItem from '../../components/ThoughtsItem.astro'
 import { getCollection } from 'astro:content'
 import PageLayout from '../../layouts/Layout.astro'
 import { THOUGHTS } from '../../consts.ts'
-import Container from '../../components/Container.astro'
 
 const thoughts = (await getCollection('thought')).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
@@ -11,7 +10,7 @@ const thoughts = (await getCollection('thought')).sort(
 ---
 
 <PageLayout title={THOUGHTS.TITLE} description={THOUGHTS.DESCRIPTION}>
-  <Container>
+  <section>
     <h1 class="w-full pb-8 text-7xl font-medium tracking-tight">
       {THOUGHTS.TITLE.toLowerCase()}
     </h1>
@@ -29,5 +28,5 @@ const thoughts = (await getCollection('thought')).sort(
         ))
       }
     </div>
-  </Container>
+  </section>
 </PageLayout>
