--- a/src/pages/writings/index.astro
+++ b/src/pages/writings/index.astro
@@ -3,7 +3,6 @@ import WritingItem from '../../components/WritingItem.astro'
 import { getCollection } from 'astro:content'
 import PageLayout from '../../layouts/Layout.astro'
 import { WRITINGS } from '../../consts.ts'
-import Container from '../../components/Container.astro'
 
 const writings = (await getCollection('writing')).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
@@ -11,7 +10,7 @@ const writings = (await getCollection('writing')).sort(
 ---
 
 <PageLayout title={WRITINGS.TITLE} description={WRITINGS.DESCRIPTION}>
-  <Container>
+  <section>
     <h1 class="w-full pb-8 text-7xl font-medium tracking-tight">
       {WRITINGS.TITLE.toLowerCase()}
     </h1>
@@ -27,5 +26,5 @@ const writings = (await getCollection('writing')).sort(
         ))
       }
     </div>
-  </Container>
+  </section>
 </PageLayout>
