--- a/src/pages/thoughts/[...slug].astro
+++ b/src/pages/thoughts/[...slug].astro
@@ -20,14 +20,9 @@ const post = Astro.props
 const { Content } = await post.render()
 
 const { title, description, pubDate } = post.data
-
-const ogImageUrl = new URL(`/og/${post.slug}.png`, Astro.site).toString()
 ---
 
-<Layout
-  title={post.data.title}
-  description={post.data.description}
-  image={ogImageUrl}>
+<Layout title={title} description={description}>
   <script
     is:inline
     type="application/ld+json"
@@ -36,7 +31,6 @@ const ogImageUrl = new URL(`/og/${post.slug}.png`, Astro.site).toString()
       '@type': 'BlogPosting',
       headline: title,
       description: description,
-      image: ogImageUrl,
       url: new URL(Astro.url.pathname, Astro.site).toString(),
       datePublished: pubDate,
       dateModified: pubDate,
