--- a/src/pages/writings/index.astro
+++ b/src/pages/writings/index.astro
@@ -10,8 +10,8 @@ const writings = (await getCollection('writing')).sort(
 ---
 
 <PageLayout title={WRITINGS.TITLE} description={WRITINGS.DESCRIPTION}>
-  <section>
-    <h1 class="w-full pb-8 text-7xl font-medium tracking-tight">
+  <section class="w-full">
+    <h1 class="pb-10 text-7xl font-medium tracking-tight">
       {WRITINGS.TITLE.toLowerCase()}
     </h1>
 
