--- a/src/components/WritingItem.astro
+++ b/src/components/WritingItem.astro
@@ -4,10 +4,14 @@ import FormattedDate from '../components/FormattedDate.astro'
 const { title, date, slug } = Astro.props
 ---
 
-<a href={`/writings/${slug}`}>
-  <article class="flex w-full flex-row items-center justify-between">
-    <h3 class="text-base font-medium">{title}</h3>
-    <p class="font-medium text-gray-500">
+<a href={`/writings/${slug}`} class="group block">
+  <article class="flex w-full items-center justify-between py-2">
+    <h3
+      class="text-base font-medium transition-colors group-hover:text-orange-500">
+      {title}
+    </h3>
+
+    <p class="font-medium text-gray-500 dark:text-gray-400">
       <FormattedDate date={date} />
     </p>
   </article>
