--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,10 +6,14 @@ const description = 'The page you are looking for does not exist.'
 ---
 
 <Layout title={title} description={description}>
-  <section>
-    <h1 class="w-full pb-8 text-7xl font-medium tracking-tight">404</h1>
-    <p class="mt-4 text-lg">
-      Oops! Page not found. <a href="/" class="text-orange-500 underline">
+  <section class="py-16">
+    <h1 class="w-full pb-4 text-[min(18vw,48px)] font-semibold tracking-tight">
+      404
+    </h1>
+
+    <p class="mt-2 text-base text-gray-600 dark:text-gray-400">
+      Oops! Page not found.
+      <a href="/" class="text-orange-500 underline hover:text-orange-600">
         Go Home
       </a>
     </p>
