--- a/src/pages/thoughts/index.astro
+++ b/src/pages/thoughts/index.astro
@@ -10,8 +10,8 @@ const thoughts = (await getCollection('thought')).sort(
 ---
 
 <PageLayout title={THOUGHTS.TITLE} description={THOUGHTS.DESCRIPTION}>
-  <section>
-    <h1 class="w-full pb-8 text-7xl font-medium tracking-tight">
+  <section class="w-full">
+    <h1 class="pb-10 text-7xl font-medium tracking-tight">
       {THOUGHTS.TITLE.toLowerCase()}
     </h1>
 
